рыба оффера на главной

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,10 +26,10 @@
             <p class="site-description">{{ site.description }}</p>
           </div>
 
-          <nav>
+          <!--nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
-          </nav>
+          </nav-->
         </header>
       </div>
     </div>
@@ -41,7 +41,8 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-          {% include svg-icons.html %}
+          <a href="http://vk.com/uprugie_ludi">vk.com/uprugie_ludi</a>
+          <!--{% include svg-icons.html %}-->
         </footer>
       </div>
     </div>
